fix(security): aplica hardening em logs, actuator, protecao csrf oauth e comparacoes em tempo constante